Countries dropdown added and anticipated date picker added and spacing issue

--- a/components/CalendarDropDown.module.css
+++ b/components/CalendarDropDown.module.css
@@ -1,13 +1,17 @@
+.calendarWrapper{
+  width: 100%;
+}
+
 .calendarDropdownButton {
-  margin-top: 10px;
+  /* margin-top: 10px; */
   width: 100%;
   height: 50px;
   border:  1px solid rgba(255, 255, 255, 0.36);
   border-radius: 5px;
   display: flex;
-align-items: center;
-justify-content: space-between;
-  padding: 8px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
   background-color: transparent;
   color: rgba(255, 255, 255, 0.36);
   cursor: pointer;
@@ -19,4 +23,8 @@ justify-content: space-between;
 
 .hide {
   display: none;
+}
+
+.m0{
+  margin: 0 !important;
 }
