--- a/pages/GrantOnboarding.module.css
+++ b/pages/GrantOnboarding.module.css
@@ -37,7 +37,7 @@
   }
 
   .onBoardingWrapper{
-    max-width: 970px;
+    max-width: 1000px;
     background-color: #000;
     margin: auto;
     padding: 0 30px;
@@ -85,7 +85,7 @@
     margin-bottom: 20px;
   }
 
-  .formRow button{
+  /* .formRow button{
     background: linear-gradient(45deg, #3182ce, #97266d);
     height: 45px;
     border: 1px solid #ffffff;
@@ -96,9 +96,9 @@
     cursor: pointer;
     width: 200px;
     margin-top: 30px;
-  }
+  } */
 
-  .formRow div{
+  .formControl{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -115,7 +115,7 @@
     background-color: #000;
     border: none;
     outline: none;
-    font-family: 'Inter';
+    /* font-family: 'Inter'; */
     border-bottom: 1px solid #fff;
     width: 100%;
     padding: 7px 0;
@@ -145,7 +145,7 @@
     }
 
     .onBoardingRight h5 {
-        font-family: 'Inter';
+        /* font-family: 'Inter'; */
         font-style: normal;
         font-weight: 700;
         font-size: 14px;
@@ -260,6 +260,22 @@
       cursor: pointer;
     }
 
+    .mt3{
+      margin-top: 3px !important;
+    }
+
+    .dropdownWrapper {
+      display: flex;
+      flex-direction: column;
+    }
+    
+    .dropdownWrapper label {
+      font-size: 16px;
+      color: #ffffff;
+      padding-bottom: 10px;
+    
+    }
+    
     /* ...........MEDIA QUERIES............. */
 
     @media screen and (max-width: 900px){
